--- a/game/scripts/npc/heroes/skywrath_mage.kv
+++ b/game/scripts/npc/heroes/skywrath_mage.kv
@@ -1,40 +1,36 @@
-///                                                           ///
-/// ModDota AbilityLuaSpellLibrary spells for Meepo           ///
-///                                                           ///
-/// Last Update: 7.07c                                        ///
-///                                                           ///
-
 "DOTAAbilities"
 {
   //=================================================================================================================
-  // Meepo: Earthbind
+  // Skywrath Mage: Arcane Bolt
+  // TypeScript tutorial example of custom implementation of the original spell.
   //=================================================================================================================
-  "meepo_earthbind_ts_example"
+  "typescript_skywrath_mage_arcane_bolt"
   {
     // General
     //-------------------------------------------------------------------------------------------------------------
     "BaseClass" "ability_lua"
-    "ScriptFile" "abilities/heroes/meepo/earthbind_ts_example.lua"
-    "AbilityTextureName" "meepo_earthbind"
-    "AbilityBehavior" "DOTA_ABILITY_BEHAVIOR_AOE | DOTA_ABILITY_BEHAVIOR_POINT | DOTA_ABILITY_BEHAVIOR_IGNORE_BACKSWING"
+    "AbilityTextureName" "skywrath_mage_arcane_bolt"
+    "ScriptFile" "abilities/heroes/skywrath_mage/typescript_skywrath_mage_arcane_bolt"
+    "AbilityBehavior" "DOTA_ABILITY_BEHAVIOR_UNIT_TARGET"
+    "AbilityUnitTargetTeam" "DOTA_UNIT_TARGET_TEAM_ENEMY"
+    "AbilityUnitTargetType" "DOTA_UNIT_TARGET_HERO | DOTA_UNIT_TARGET_BASIC"
+    "AbilityUnitDamageType" "DAMAGE_TYPE_MAGICAL"
     "SpellImmunityType" "SPELL_IMMUNITY_ENEMIES_NO"
-    "SpellDispellableType" "SPELL_DISPELLABLE_YES"
     "FightRecapLevel" "1"
-    "AbilitySound" "Hero_Meepo.Earthbind.Cast"
-
+    "AbilitySound" "Hero_SkywrathMage.ArcaneBolt.Cast"
 
     // Casting
     //-------------------------------------------------------------------------------------------------------------
-    "AbilityCastRange" "1250"
-    "AbilityCastPoint" "0.3"
+    "AbilityCastRange" "875"
+    "AbilityCastPoint" "0.1 0.1 0.1 0.1"
 
     // Time
     //-------------------------------------------------------------------------------------------------------------
-    "AbilityCooldown" "2"
+    "AbilityCooldown" "5.0 4.0 3.0 2.0"
 
     // Cost
     //-------------------------------------------------------------------------------------------------------------
-    "AbilityManaCost" "10"
+    "AbilityManaCost" "90"
 
     // Special
     //-------------------------------------------------------------------------------------------------------------
@@ -42,32 +38,34 @@
     {
       "01"
       {
-        "var_type" "FIELD_FLOAT"
-        "duration" "2.0"
+        "var_type" "FIELD_INTEGER"
+        "bolt_speed" "500"
       }
+
       "02"
       {
         "var_type" "FIELD_INTEGER"
-        "radius" "220"
+        "bolt_vision" "325"
       }
+
       "03"
       {
-        "var_type" "FIELD_INTEGER"
-        "speed" "857"
+        "var_type" "FIELD_FLOAT"
+        "bolt_damage" "60 80 100 120"
       }
+
       "04"
       {
-        "var_type" "FIELD_INTEGER"
-        "tooltip_range" "1250"
+        "var_type" "FIELD_FLOAT"
+        "int_multiplier" "1.6"
+        "CalculateSpellDamageTooltip" "1"
       }
-      // Adding cooldown and praying this gets synced
+
       "05"
       {
         "var_type" "FIELD_FLOAT"
-        "cooldown" "2"
-        "LinkedSpecialBonus" "special_bonus_unique_meepo3"
+        "vision_duration" "3.34"
       }
-
     }
     "AbilityCastAnimation" "ACT_DOTA_CAST_ABILITY_1"
   }
